--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,36 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
+# Dependency directories
+node_modules/
+.pnp/
 .pnp.js
 
-# testing
-/coverage
-
-# production
+# Build directories
 /build
+/dist
 
-# misc
-.DS_Store
+# Local env files
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# IDE and editor files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Coverage directory used by testing frameworks
+coverage/
